objects/scormanywhere__Course_Sharing__c.object
<CustomObject>
    <fields>
        <fullName>scormanywhere__Course__c</fullName>
        <label>Media</label>
        <referenceTo>scormanywhere__Course__c</referenceTo>
        <relationshipLabel>Media Sharing</relationshipLabel>
        <relationshipName>Course_Sharing</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Media_Sharing_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Media Sharing Rule</label>
        <referenceTo>scormanywhere__Media_Sharing_Rule__c</referenceTo>
        <relationshipLabel>Media Sharing</relationshipLabel>
        <relationshipName>Media_Sharing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scormanywhere__Object_Id__c</fullName>
        <label>Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Media Sharing</label>
    <nameField>
        <displayFormat>MS-{0}</displayFormat>
        <label>Media Sharing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Sharing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>